--- a/static/pangolin/css/universal.css
+++ b/static/pangolin/css/universal.css
@@ -1015,7 +1015,7 @@ a.btn-nav .btn {
 .bg-dark, .bg-dark2, .bg-transparent, .bg-img, .bg-img2, .bg-img3, .bg-img4, .bg-img5 {
   color: #fff !important;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.2); }
-
+/*
 .bg-img {
   background: url(../img/laser_2.gif); }
 
@@ -1026,7 +1026,7 @@ a.btn-nav .btn {
   background: url(../img/laser_4.gif); }
 
 .bg-img4 {
-  background: url(../img/laser_15.jpg); }
+  background: url(../img/laser_15.jpg); }*/
 
 .bg-img5 {
   background: url(../img/laser_6.gif); }
